# poc-plpgsql-analyzer

./: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  DEVELOPMENT.md  LICENSE  PKG_README.md  README.md  TODO.md  flake.nix
.github/workflows/: build.yml  publish.yml  typescript-test.yml
crates/definitions/: Cargo.toml
crates/definitions/src/: data.rs  lib.rs  syntax.rs  token.rs
crates/source_gen/: Cargo.toml  build.rs
crates/source_gen/src/lexer/: generated.rs  mod.rs
crates/source_gen/src/syntax/: generated.rs  mod.rs
inner_definitions/: Cargo.toml
inner_definitions/src/: data.rs  lib.rs  syntax.rs  token.rs
inner_source_gen/: Cargo.toml  build.rs
inner_source_gen/src/lexer/: generated.rs
src/: analyze.rs  ast.rs  lib.rs  parser.rs  syntax.rs  util.rs  wasm_bindings.rs
src/analyzer/: function.rs  mod.rs  procedure.rs  query.rs  trigger.rs  view.rs
src/ast/: argument_list.rs  cursor.rs  datatype.rs  dml.rs  expressions.rs  function.rs  function_invocation.rs  mod.rs  procedure.rs  query.rs  table.rs  trigger.rs  view.rs
src/grammar/: block.rs  call_spec.rs  case.rs  commit.rs  constraint.rs  cursor.rs  datatype.rs  declare_section.rs  dml.rs  dql.rs  element_spec.rs  execute_immediate.rs  expressions.rs  forall.rs  function.rs  function_invocation.rs  loops.rs  mod.rs  package.rs  procedure.rs  query.rs  raise.rs  sequence.rs  table.rs  trigger.rs  udt.rs  view.rs
src/lexer/: generated.rs  mod.rs  token.rs
src/rules/: builtins.rs  mod.rs  parameter.rs  procedure.rs
src/sourcegen/: data.rs  mod.rs  syntax.rs  token.rs
src/syntax/: generated.rs  mod.rs
tests/: README.md  lib.rs  parser.rs
tests/builtin_functions/add_months/: README.md  add_months.ora.sql  add_months.pg.sql
tests/builtin_functions/add_months()/: README.md  add_months().ora.sql  add_months().pg.sql
tests/builtin_functions/current_timestamp/: current_timestamp.ora.sql
tests/builtin_functions/dbms_output.put_line/: README.md  dbms_output.put_line.ora.sql  dbms_output.put_line.pg.sql
tests/builtin_functions/dbms_random.value/: README.md  dbms_random.value.ora.sql  dbms_random.value.pg.sql
tests/builtin_functions/decode/: README.md  decode.ora.sql  decode.pg.sql
tests/builtin_functions/empty_blob/: README.md  empty_blob.ora.sql  empty_blob.pg.sql
tests/builtin_functions/empty_clob/: README.md  empty_clob.ora.sql  empty_clob.pg.sql
tests/builtin_functions/last_day/: README.md  last_day.ora.sql  last_day.pg.sql
tests/builtin_functions/months_between/: README.md  months_between.ora.sql  months_between.pg.sql
tests/builtin_functions/nvl/: README.md  nvl.ora.sql  nvl.pg.sql
tests/builtin_functions/nvl2/: README.md  nvl2.ora.sql  nvl2.pg.sql
tests/builtin_functions/set serveroutput on/: README.md  setserveroutputon.ora.sql  setserveroutputon.pg.sql
tests/builtin_functions/substr/: README.md  substr.ora.sql  substr.pg.sql
tests/builtin_functions/sysdate/: README.md  sysdate.pg.sql
tests/builtin_functions/systimestamp/: README.md  systimestamp.ora.sql  systimestamp.pg.sql
tests/builtin_functions/to_char/: README.md  to_char.ora.sql  to_char.pg.sql
tests/builtin_functions/to_date()/: to_date().ora.sql
tests/builtin_functions/user/: README.md  user.pg.sql
tests/decode/: README.md  decode.ora.sql  decode.pg.sql
tests/dql/: multiple_where_conditions.ora.sql  nvl-coalesce.ora.sql  nvl-coalesce.pg.sql  select_left_join.ora.sql  select_right_join.ora.sql
tests/fixtures/: add_job_history.sql  add_job_history_body.sql  empty_parameter_list.sql  log_last_login_fuzzy.ora.sql  secure_dml.pg.sql  secure_dml.sql  unicode_characters.ora.sql  update_job_history.sql
tests/function/heading/: deterministic_function.ora.sql  function_heading_example.ora.sql  ignore_editionable.ora.sql  ignore_noneditionable.ora.sql  parameter_declaration_empty.ora.sql
tests/package/: util.ora.sql
tests/procedure/: log_last_login_fuzzy.ora.sql
tests/procedure/heading/: ignore_editionable.ora.sql  ignore_editionable.pg.sql  ignore_noneditionable.ora.sql.disabled  ignore_noneditionable.pg.sql  multiple_parameters.ora.sql  multiple_parameters.pg.sql  multiple_parameters_default.ora.sql  (+13 more)
tests/trigger/: after_trigger.ora.sql  instead_of_trigger.ora.sql  schema_trigger.ora.sql
tests/typescript/: .prettierrc.js  jest.config.js  package-lock.json  package.json  tsconfig.json
tests/view/: check_option_view.ora.sql  editionable_view.ora.sql  editioning_view.ora.sql  object_type_view.ora.sql  read_only_view.ora.sql  unique_constraint_view.ora.sql  view_with_constraint.ora.sql  xmltype_view.ora.sql
(+46 files in other folders)
