[package]
name = "poc-plpgsql-analyzer"
authors = ["Christoph Heiss <christoph.heiss@cybertec.at>"]
version = "0.1.0"
edition = "2021"
description = "Proof of concept for tooling to migrate PL/SQL code to PL/pgSQL written in Rust."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cybertec-postgresql/poc-plpgsql-analyzer"
publish = false

[package.metadata.nix]
build = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
indexmap = "^1.9.1"
lazy_static = "^1.4.0"
logos = "^0.12.1"
num-derive = "^0.3.3"
num-traits = "^0.2.15"
rowan = "^0.15.10"
serde-wasm-bindgen = "^0.4.5"
serde_repr = "^0.1.9"
text-size = "^1.1.0"
thiserror = "^1.0.35"
wasm-bindgen = "^0.2.83"
wasm-typescript-definition = "^0.1.4"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dev-dependencies]
datatest-stable = "^0.1.3"
expect-test = "^1.4.0"
pretty_assertions = "^1.3.0"

[profile.release]
lto = true

[[test]]
name = "parser"
harness = false
required-features = ["coverage-tests"]

[features]
coverage-tests = []
