[package]
name = "poc-plpgsql-analyzer"
authors = ["Christoph Heiss <christoph.heiss@cybertec.at>", "Kieran Kaelin <kieran_kaelin@yahoo.co.uk", "Jeremy Sztavinovszki <j.sztavi@pm.me>"]
version = "0.1.2"
edition = "2021"
description = "Proof of concept for tooling to migrate PL/SQL code to PL/pgSQL written in Rust."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cybertec-postgresql/poc-plpgsql-analyzer"
publish = false

[package.metadata.nix]
build = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
indexmap = "^2.12.0"
lazy_static = "^1.4.0"
logos = "^0.15.1"
num-derive = "^0.4.2"
num-traits = "^0.2.15"
rowan = "^0.16.1"
serde-wasm-bindgen = "^0.6.5"
text-size = "^1.1.0"
thiserror = "^2.0.17"
tsify = "0.4.3"
unicode-width = "^0.2.2"
wasm-bindgen = "^0.2.86"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.source_gen]
path = "./crates/source_gen"

[dependencies.definitions]
path = "./crates/definitions"

[dev-dependencies]
datatest-stable = "^0.3.3"
expect-test = "^1.4.0"
heck = "^0.5.0"
pretty_assertions = "^1.3.0"
proc-macro2 = "^1.0.57"
quote = "^1"

[profile.release]
lto = true

[[test]]
name = "parser"
harness = false
required-features = ["coverage-tests"]

[features]
coverage-tests = []
